--- a/hello.html
+++ b/hello.html
@@ -1,12 +1,236 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Print hello</title>
+    <head>
+        <link rel="stylesheet" href="project.css">
+    <script>
+        function myFunction() {
+            document.getElementById("myDropdown").classList.toggle("show");
+        }
+
+        // Close the dropdown menu if the user clicks outside of it
+        window.onclick = function (event) {
+            if (!event.target.matches('.dropbtn')) {
+                var dropdowns = document.getElementsByClassName("dropdown-content");
+                var i;
+                for (i = 0; i < dropdowns.length; i++) {
+                    var openDropdown = dropdowns[i];
+                    if (openDropdown.classList.contains('show')) {
+                        openDropdown.classList.remove('show');
+                    }
+                }
+            }
+        }
+    </script>
 </head>
 <body>
-    <h1> Hello! </h1>
+    <div class="header">
+        <div class="text">
+            <h1>Department of
+                Computer Science and Engineering
+            </h1>
+            <h3>Indian Institute of Technology Guwahati</h3>
+        </div>
+        <div class="logo">
+
+            <img src="https://event.iitg.ac.in/icann2019/Proceedings_LaTeX/2019/IITG_logo.png" height="150px" />
+        </div>
+    </div>
+
+    <div class="head1">
+        <a href="./project.html" id="home">
+            <img src="homeIcon.png" height=" 25px" />
+        </a>
+        <a href="./hello.html" class="active_tab">News & Updates</a>
+        <a href="./pro2.html">Research</a>
+        <a href="./pro1.html">Courses</a> 
+        <a href="./pro3.html">Students</a>
+        <a href="https://tinyurl.com/y9qs9jl6">MARS Lab Video</a>
+        <a href="https://www.youtube.com/watch?v=4goj-ajnpOQ&list=PLEAYkSg4uSQ3dmkbCah82ek0KJnpz_DxL">NPTEL Courses</a>
+        <div class="dropdown">
+            <button onclick="myFunction()" class="dropbtn">More</button>
+            <div id="myDropdown" class="dropdown-content">
+                <a href="https://www.iitg.ac.in/johnjose/Brochures/John_shortprofile_2022.pdf">Short CV</a>
+                <a
+                    href="https://scholar.google.co.in/citations?hl=en&user=Zp4X1NsAAAAJ&view_op=list_works&gmla=AJsN-F7q-r-xt0S1lomjmEJCpjYUex81Sya5JSOuiTHKbCnE_T38nCO3eVt_sR7xMfKjTxfa6EzKzsamzNrh25JGepUyu7QDw">Google
+                    Scholar</a>
+                <a href="http://dblp.uni-trier.de/pers/hd/j/Jose:John">DBLP</a>
+                <a href="https://www.scopus.com/authid/detail.uri?authorId=54882122100">Scopus Author Profile</a>
+                <a href="https://iitg.irins.org/profile/128280">IRINS Faculty Profile</a>
+            </div>
+        </div>
+    </div>
+    </div>
+</body>
+        <li>13.05.2024:<img src="https://www.iitg.ac.in/johnjose/new.gif">"Amit Puri joined AMD Bangalore as Senior Silicon Design Engineer." </li>
+        <br />
+        <li>01.05.2024:<img src="https://www.iitg.ac.in/johnjose/new.gif"> Phrangboklang Lyngton Thangkhiew joined as Assistant Professor at <a href="https://www.iitg.ac.in/cse/internet-pages/phrangboklang">CSE department,  IIT GUWAHATI</a></li>
+        <br />
+        <li>24.04.2024:<img src="https://www.iitg.ac.in/johnjose/new.gif"> Manju R. submitted her Ph.D thesis.</li>
+         <br />
+         <li>04.04.2024:<img src="https://www.iitg.ac.in/johnjose/new.gif">Paper by Sivakumar et al. accepted for publication in <a href="https://dl.acm.org/doi/10.1145/3639821">ACM-TODAES.</a> </li>
+         <br />
+         <li>01.04.2024:<img src="https://www.iitg.ac.in/johnjose/new.gif"> John Jose is nominated as chair, local organizing committee of <a href="https://ants2024.ieee-ants.org/committees/organizing-committee">IEEE ANTS</a>conference 2024 to be held at IIT Guwahati.</li>
+         <br />
+         <li>30.03.2024:<img src="https://www.iitg.ac.in/johnjose/new.gif">Paper by Amit Puri et al. accepted for publication in <a href="https://sigsim.acm.org/conf/pads/2024/">38th ACM SIGSIM-PADS 2024.</a> </li>
+        <br />
+        <li>23.02.2024: Amit Puri received an offer from AMD Bangalore as Senior Silicon Design Engineer.</li>
+        <br />
+        <li>01.02.2024: John Jose is organizing <a href="https://www.iitg.ac.in/johnjose/inae.html">INAE-SERB Pedagogy workshop on Teaching and Research</a> during 15-16 March, 2024.</li>
+        <br />
+        <li>04.02.2024: John Jose is re-appointed as the Vice Chair-Industry Academia Collaboration of <a href="https://ieeeindiacouncil.org/executive-committee-2023/">IEEE Indian Council</a>for the year 2024.</li>
+        <br />
+        <li>13.01.2024: Paper by Rose Kunthara et al. accepted in World Scientific <a href="https://www.worldscientific.com/doi/epdf/10.1142/S0218126624502074">Journal of Circuits, Systems & Computers.</a> </li>
+        <br />
+        <li>12.01.2024: Work submitted by Syam Sankar accepted in Ph.D Forum of <a href="https://www.date-conference.com/">Date 2024</a>Valencia, Spain.</li>
+        <br />
+        <li>19.12.2023: John Jose served as a session chair in <a href="https://www.mcsoc-forum.org/">MCSoC-2023</a> conference held at SUTD, Singapore.</li>
+        <br />
+        <li>18.12.2023: MARS Lab team consiting of John Jose, Ruchika Gupta, Amit Puri and Syam Sankar visited NUS Singapore for invited talks.</li>
+        <br />
+        <li>12.12.2023: Paper by Syam Sankar et al. accepted for publication in <a href="https://dl.acm.org/doi/10.1145/3639821">ACM-TODAES.</a></li>
+        <br />
+        <li>01.11.2023: John Jose is serving as Fellowship co-chair of VLSI Design conference to be held at Kolkata from 6 to 10, January 2024.</li>
+        <br />
+        <li>31.10.2023: Paper by Sachin Bagga et al. accepted in <a href="https://www.mcsoc-forum.org/">MCSoC-2023</a>to be held in Singapore. </li>
+        <br />
+       <li>30.10.2023: Paper by Syam Sankar et al. accepted for publication in <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=4563995">IEEE-ESL.</a> </li>
+        <br />
+        <li>28.09.2023: Paper by Manju R. et al. accepted for publication in <a href="https://www.sciencedirect.com/science/article/abs/pii/S1383762123001856">Elsevier-JSA.</a> </li>
+        <br />
+        <li>20.09.2023: Paper by Dipika Deb et al. received best paper award in <a href="https://esweek.org/archive/">CASES @ ESWEEK</a> held in Hamburg, Germany.</li>
+        <br />
+        <li>23.08.2022: Paper by Sivakumar et al. accepted in Ph.D Forum Track of <a href="https://sites.google.com/view/vlsi-soc2023/home">VLSI-SoC-2023.</a></li>
+        <br />
+        <li>18.08.2023: Paper by Syam Sankar et al accepted in <a href="https://isocc.org/">ISOCC-2023</a> to be held in Jeju Island, South Korea.</li>
+        <br />
+        <li>11.08.2023: Paper by Amit Puri et al. accepted in <a href="https://cradrs.github.io/sbacpad2023/venue/">SBAC-PAD-2023</a>to be held in Porto Alegre, Brazil.</li>
+        <br />
+        <li>10.08.2023: Papers by Syam Sankar et al., Amit Puri et al., and Josna V.R. et al. accepted in <a href="https://www.mcsoc-forum.org/">MCSoC-2023</a>to be held in Singapore.</li>
+        <br />
+        <li>09.08.2023: Amit Puri and Syam Sankar received travel grant from CEDA for attending <a href="https://esweek.org/cases/">Ph.D Forum @ ESWEEK</a>in Hamburg, Germany.</li>
+        <br />
+        <li>08.08.2023: Paper by Sivakumar S. et al acccepted for publication in <a href="https://dl.acm.org/journal/todaes">ACM-TODAES.</a></li>
+        <br />
+        <li>05.08.2023: John Jose was invited for a presentation at <a href="https://www.csa.iisc.ac.in/">CSA department, IISc Bangalore</a>as an invited speaker.</li>
+        <br />
+        <li>04.08.2023: MoU signed between between Qualcomm India and IEEE India Council under the aegis of John Jose, IEEE IC Vice-Chair.</li>
+        <br />
+        <li>23.07.2023: NPTEL Online Course on <a href="https://onlinecourses.nptel.ac.in/noc23_cs113/preview">Multicore Computer Architecture</a> [Last date of Enrollment: 31.08.2022] </li>
+        <br />
+        <li>21.07.2023: Works by Syam Sankar, Amit Puri and Dipika Deb acccepted in <a href="https://esweek.org/esweek-ph-d-forum-and-recruitment-events/">Ph.D Forum @ ESWEEK 2023</a>in Hamburg, Germany. </li>
+        <br />
+        <li>14.07.2023: Paper by Thejaswini P. et al acccepted in <a href="https://www.tencon2023.org/">TENCON-2023</a>to be held in Chiang Mai, Thailand.</li>
+        <br />
+        <li>01.07.2023: Paper by Dipika Deb et al acccepted as best paper candidate in <a href="https://esweek.org/cases/">CASES @ ESWEEK</a>to be held in Hamburg, Germany.</li>
+        <br />
+        <li>25.06.2023: Syam Sankar received the best student research forum poster in <a href="https://event.iitg.ac.in/GCON2023/">IEEE GCON-2023.</a>Congrats Syam.</li>
+        <br />
+        <li>17.04.2023: Sivakumar S. joined as senior engineer in <a href="https://vayavyalabs.com/">Vayavya Labs,</a>Bangalore. Best wishes Siva.</li>
+        <br />
+        <li>03.03.2023: Paper by Maurizio Palesi et al. accepted in <a href="https://www.ipdps.org/ipdps2023/2023-workshops.html">ADOPT-23 workshop held in conjucntion with IEEE-IPDPS-2023.</a> </li>
+        <br />
+        <li>03.02.2023: John Jose is re-appointed as the Vice Chair-Industry Academia Collaboration of <a href="https://ieeeindiacouncil.org/executive-committee-2023/">IEEE India Council</a>for the year 2023. </li>
+        <br />
+        <li>12.12.2022: Joint project in Hardware Security with Dr. Manimeghalai R., PSGiTech, Coimbatore got R&D funding under SERB - TARE scheme.</li>
+        <br />
+        <li>11.11.2022: John Jose is moderating the panel discussion on <a href="https://www.iitg.ac.in/johnjose/Brochures/IEEE_CU.jfif">IEEE India Council Industrial Conclave</a>at Chandigarh University.</li>
+        <br />
+        <li>24.10.2022: Paper by Amit Puri et al. accepted in <a href="http://www.ieee-hpcc.org/2022/">IEEE HPCC-2022.</a></li>
+        <br />
+        <li>28.09.2022: Paper by Neethu K. et al. is accepted in <a href="https://www.indicon2022.org/">IEEE INDICON-2022.</a></li>
+        <br />
+        <li>30.08.2022: Paper by Sudeep Paricha et al. is accepted in <a href="https://nocs2022.github.io/">NOCS-2022</a> and publication in IEEE-Design and Test journal.</li>
+        <br />
+        <li>18.08.2022: Papers by Manjari Saha et al. and Manju R. et al accepted in <a href="https://www.nocarc.org/">NoCArc-2022.</a></li>
+        <br />
+        <li>10.08.2022: SPARC Workshop on <a href="https://www.iitg.ac.in/johnjose/sparc6.html">Scaling Blockchains: From Bitcoin to the Lightning Network,</a>August 23-25, 2022.</li>
+        <br />
+        <li>16.07.2022: Papers by Mohammad H. Khan et al., Yogesh Kumar et al. and Akshay Sarman et al. accepted in <a href="https://vlsisoc2022.com/">VLSI-SoC-2022.</a></li>
+        <br />
+        <li>25.06.2022: NPTEL Online Course on <a href="https://onlinecourses.nptel.ac.in/noc22_cs110/preview">Multicore Computer Architecture - Storage and Interconnects</a> [Last date of Enrollment: 01.08.2022] </li>
+        <br />
+        <li>23.06.2022: John Jose is serving as TPC Co-chair of 15th International Workshop on NoC <a href="https://www.iitg.ac.in/johnjose/Brochures/NoCArc22_CFP_Flyer.pdf">[NoCArc-2022]</a>to be held at Chicago, USA.</li>
+        <br />
+        <li>17.06.2022: Abhijit Das received the Best Ph.D thesis (CSE) in the 24th convocation of IIT Guwahati.</li>
+        <br />
+        <li>23.06.2022: Ruchika Gupta presented in Young Researcher's Forum of <a href="https://iseapmu.in/virtualconclave/ivpc2022">IVPC-2022</a> on 23.06.2022.</li>
+        <br />
+        <li>02.06.2022: Dipika Deb received an offer for the post of Assistant Professor at IIT Mandi.</li>
+        <br />
+        <li>25.05.2022: ISEA Project Security workshops at <a href="https://www.iitg.ac.in/johnjose/Brochures/ISEA_JSSATEB.pdf">JSSATE Bengaluru</a>& <a href="https://www.iitg.ac.in/johnjose/Brochures/ISEA_ISEA_JSSSTU.pdf">JSSSTU Mysuru.</a> </li>
+        <br />
+        <li>22.05.2022: Paper by Abhijit Das et al. accepted in <a href="http://www.eng.ucy.ac.cy/theocharides/isvlsi22/">Student Research Forum Track of ISVLSI-2022.</a> </li>
+        <br />
+        <li>17.05.2022: Dipika Deb defended her Ph D. thesis. Congratulations Dr. Dipika.</li>
+        <br />
+        <li>08.05.2022: Paper by Manju R. et al. accepted for publication in <a href="http://www.eng.ucy.ac.cy/theocharides/isvlsi22/">ISVLSI-2022.</a></li>
+        <br />
+        <li>25.04.2022: ISEA Project Security workshop at <a href="https://www.iitg.ac.in/johnjose/Brochures/ISEA_CUSAT_May2022.pdf">Cochin University.</a> </li>
+        <br />
+        <li>12.04.2022: Syam Sankar selected as <a href="https://www.pmrf.in/">The Prime Minister's Researh Fellow (PMRF)</a>of December 2021 cycle.</li>
+        <br />
+        <li>01.04.2022: Papers by Ruchika Gupta et al. and Rose G. Kunthara et al. accepted for publication in <a href="https://www.glsvlsi.org/">GLSVLSI-2022.</a></li>
+        <br />
+        <li>15.03.2022: ISEA Project Security workshops at <a href="https://www.iitg.ac.in/johnjose/Brochures/ISEA_BITMeerut.pdf">BIT Meerut</a>and <a href="https://www.iitg.ac.in/johnjose/Brochures/ISEA-SRMIST.pdf">SRMIST Ghaziabad.</a></li>
+        <br />
+        <li>10.03.2022: Papers by Sivakumar S. et al. and Sachin Bagga et al. accepted for publication in ISDCS-2022.</li>
+        <br />
+        <li>25.02.2022: NoC security project received SERB-Core Research Grant approval for 50.72 lakhs.</li>
+        <br />
+        <li>10.02.2022: Promotional Video of MARS Lab released <a href="https://tinyurl.com/y9qs9jl6" >Watch It Here.</a></li>
+        <br />
+        <li>09.02.2022: SPARC Workshop on <a href="https://www.iitg.ac.in/johnjose/sparc5.html">Intelligent Multi-Core Systems,</a>Feb 22-24, 2022.</li>
+        <br />
+        <li>01.02.2022: NPTEL Online Course on <a href="https://onlinecourses.nptel.ac.in/noc22_cs10/preview">Advanced Computer Architecture</a></li>
+        <br />
+       <li>01.02.2022: John Jose joined the <a href="https://ieee-ceda.org/publication/esl-publication/esl-editorial-board">Editorial Board of IEEE-Embedded System Letters</a> as Associate Editor.</li>
+        <br />
+        <li>22.01.2022: John Jose is appointed as the Vice Chair of <a href="https://site.ieee.org/indiacouncil/executive-committee-2022/">IEEE India Council.</a></li>
+        <br />
+        <li>26.12.2021: Abhijit Das joined <a href="https://www.inria.fr/en">INRIA France</a>as Post Doctoral Fellow.</li>
+        <br />
+        <li>01.12.2021: Dipika Deb job joined Intel, Bangalore as Performance Architect.</li>
+        <br />
+        <li>12.10.2021: Abhijit Das defended his Ph D. thesis. Congratulations Dr. Abhijit.</li>
+        <br />
+        <li>06.10.2021: Paper by Mohammed Humam et al. is accepted for publication in <a href="https://www.nocarc.org/program">NoCArc-2021.</a></li>
+        <br />
+        <li>02.10.2021: Paper by Thejaswini et al. is accepted for publication in <a href="https://www.ewh.ieee.org/r10/calcutta/indicon2021/index.html">INDICON-2021.</a></li>
+        <br />
+        <li>24.07.2021: Paper by Vedika J. Kulkarni et al. is accepted for publication in <a href="https://esweek.org/nocs/">NOCS-2021.</a></li>
+        <br />
+        <li>23.07.2021: Dipika Deb submitted her Ph.D thesis.</li>
+        <br />
+        <li>19.07.2021: Abhijit Das joined AMD Bangalore as Silicon Design Engineer.</li>
+        <br />
+        <li>01.07.2021: Abhijit Das submitted his Ph.D thesis.</li>
+        <br />
+        <li>09.06.2021: Paper by Abhijit Das et al. is accepted for publication in <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=92">IEEE Transactions on Very Large Scale Integration Systems.</a> </li>
+        <br />
+        <li>07.06.2021: Paper by Dipika Deb et al. is accepted for publication in <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=71">IEEE Transactions on Parallel and Distributed Systems.</a> </li>
+        <br />
+        <li>07.06.2021: Paper by Sivakumar S. et al. is accepted for publication in <a href="https://www.glsvlsi.org/">Great Lakes Symposium on VLSI.</a></li>
+        <br />
+        <li>15.05.2021: Springer book chapter by Manju R. et al. is now available online.</li>
+        <br />
+        <li>07.04.2021: John Jose receives <a href="https://www.iitg.ac.in/johnjose/Images/Qualcomm.jpg">2021 Qualcomm Faculty Award</a>with a gift funding of US$ 15,000.</li>
+        <br />
+        <li>21.03.2021: Paper by Abhijit Das et al. is accepted for publication in <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=12">IEEE Transactions on Computers.</a></li>
+        <br />
+        <li>01.03.2021: Paper by by Rose G. Kunthara et al. is accepted for publication in <a href="https://www.journals.elsevier.com/nano-communication-networks">Elsevier Nano Communication Networks.</a></li>
+        <br />
+        <li>20.02.2021: Paper by Abhijit Das et al. is accepted for publication in <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=5962380">IEEE Consumer Electronics Magazine.</a></li>
+        <br />
+        <li>05.01.2021: Paper by Dipika Deb et al. is accepted for publication in <a href="https://dl.acm.org/journal/todaes">ACM Transactions on Design Automation of Electronic Systems.</a></li>
+        <br />
+        <li>17.06.2020: Abhishek Kumar received the best M.Tech thesis (CSE) award from 2019-20 batch in the 22nd Convocation of IITG.</li>
+        <br />
+        <li>01.01.2020: NPTEL Courses Playlists - <a href="https://tinyurl.com/ycung9kz">Advanced Computer Architecture</a>|| <a href="https://tinyurl.com/uq748cn">Multi-Core Computer Architecture - Storage and Interconnects</a></li>
+        </p>
+        <body>
     
 </body>
 </html>
