--- a/web.html
+++ b/web.html
@@ -3,14 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>web page</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="web.css" >
 </head>
+<div>
+    <li class="list active">
+        <a href=""> <span class="icon">
+            <ion-icon name="home-outline"></ion-icon>
+        </span></a>
+    </li>
+</div>
 <body>
-    <head>
-        <head>
-            
-          </head>
-      </head>
     
 </body>
 </html>
