--- a/hello.html
+++ b/hello.html
@@ -34,13 +34,12 @@
             <h3>Indian Institute of Technology Guwahati</h3>
         </div>
         <div class="logo">
-
             <img src="https://event.iitg.ac.in/icann2019/Proceedings_LaTeX/2019/IITG_logo.png" height="150px" />
         </div>
     </div>
 
     <div class="head1">
-        <a href="./project.html" id="home">
+        <a href="./index.html" id="home">
             <img src="homeIcon.png" height=" 25px" />
         </a>
         <a href="./hello.html" class="active_tab">News & Updates</a>
