--- a/pro1.html
+++ b/pro1.html
@@ -43,7 +43,7 @@
     </div>
 
     <div class="head1">
-        <a href="./project.html" id="home">
+        <a href="./index.html" id="home">
             <img src="homeIcon.png" height=" 25px" />
         </a>
         <a href="./hello.html">News & Updates</a>
