--- a/calcu.html
+++ b/calcu.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <link rel="stylesheet" href="calcu.css">
-    <link rel="stylesheet" href="calcu.js">
 </head>
 <body>
     <script src=
@@ -112,6 +111,7 @@
             </tr>
         </table>
     </form>
+    <script type="text/javascript" src="calcu.js"></script>
     
 </body>
 </html>
