--- a/game1.html
+++ b/game1.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="game1.css">
-    <link rel="stylesheet" href="game1.js">
 </head>
-<script src="script.js">
-    
-</script>
+<!-- <link rel="stylesheet" href="game1.js"> -->
+
 <body>
     <div class="wrapper">
         <div class="container">
@@ -29,6 +28,9 @@
         <p id="message">Sample Message</p>
         <button id="new-game">New Game</button>
     </div>
-    
+    <script src="game1.js">
+    </script>
+
 </body>
+
 </html>
